Fix missing icon replacement
When the icon for an app was missing, the layout broke because of the
change in cf869621.

--- a/resources/css/launcher.scss
+++ b/resources/css/launcher.scss
@@ -100,9 +100,15 @@ body {
 .core-app-icon {
     position: relative;
 
-    img {
+
+    img,.icon-replacement {
         height: 48px;
         width: 48px;
+    }
+
+    .icon-replacement {
+        border-radius: 7px;
+        background: #e6f8ff;
     }
 
     // Transform old primary color to match brand.
